<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itp341.dunlap.forrest.water.fragments.DonateFragment"
    android:focusableInTouchMode="true">

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/menu_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:src="@drawable/ic_drawer"
        app:fab_colorNormal="@color/colorPrimaryDark"
        app:fab_colorPressed="@color/colorPrimary"
        app:fab_colorRipple="@color/colorSecondary"
        app:fab_size="mini"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="77dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/donate_fragment_title"
                android:textSize="35sp" />

            <itp341.dunlap.forrest.water.views.QuestionTextView
                android:id="@+id/one_dollar_button"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="@string/one_dollar_text"
                android:textAlignment="center"
                android:textSize="25sp" />

            <itp341.dunlap.forrest.water.views.QuestionTextView
                android:id="@+id/five_dollar_button"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="@string/five_dollar_text"
                android:textAlignment="center"
                android:textSize="25sp" />

            <itp341.dunlap.forrest.water.views.QuestionTextView
                android:id="@+id/ten_dollar_button"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="@string/ten_dollar_text"
                android:textAlignment="center"
                android:textSize="25sp" />

            <itp341.dunlap.forrest.water.views.QuestionTextView
                android:id="@+id/twentyfive_dollar_button"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="@string/t25_dollar_text"
                android:textAlignment="center"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/donate_other_et"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/other_et_label"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textIsSelectable="false"
                android:textSize="20sp" />

            <itp341.dunlap.forrest.water.views.QuestionTextView
                android:id="@+id/donate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/purchase_button_text"
                android:textSize="25sp" />
        </LinearLayout>




        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111"
            android:layout_marginBottom="16dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    
</FrameLayout>
